--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.container{
+  width: 300px;
+  height: 300px;
+}
+
+.container form{
+  width: 90%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
+}
+
+.container input{
+  width: 90%;
+  padding: 8px 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+  outline: none;
+  font-size: 18px;
+}
+
+.container .user{
+  width: 100%;
+  display: flex;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1.1px;
+  align-items: center;
+  justify-content: center;
+}
+
+.container button{
+  padding: 5px 20px;
+  border-radius: 10px;
+  background: teal;
+  font-size: 18px;
+  letter-spacing: 1.1px;
   color: white;
+  border: none;
+  outline: none;
+  width: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+form > span{
+  color: rgb(252, 62, 62);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
